--- a/ComputerGraphicsCursProject/ComputerGraphicsCursProject.csproj
+++ b/ComputerGraphicsCursProject/ComputerGraphicsCursProject.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Matrix.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="RuledSurface.cs" />
+    <Compile Include="SlideStates.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
